@@ -1268,6 +1268,7 @@ void iyHybrid(
 
       // Calculate scattering source term here
       //
+      //get_ppath_scatsource();
       ppath_scat_source.resize( nf, stokes_dim, ne, np );
       ppath_scat_source = 0;
       //
@@ -1281,10 +1282,6 @@ void iyHybrid(
         throw runtime_error( os.str() );
       }
       Index Nza = scat_za_grid.nelem();
-      Tensor5 pha_mat_spt_local(pnd_field.nbooks(), Nza, Naa,
-                                stokes_dim, stokes_dim, 0.);
-      //Tensor6 product_fields(2, 2, 2, Nza, Naa, stokes_dim, 0);
-      Tensor3 scat_sources(2, 2, 2, 0);
 
       for( Index ip=0; ip<np; ip++ )
       {
@@ -1303,32 +1300,42 @@ void iyHybrid(
           // doit_i_field can be interpolated. Note that only 1D is allowed
           // and that cloudbox is forced to span complete atmosphere
 
-          // determine p/z-interp weights for this ppath point
-          ArrayOfGridPos gp_p(1);
-          gridpos_copy( gp_p[0], ppath.gp_p[np-1] );
+          // determine p/z-interp weights for this ppath point (apply in freq
+          // loop)
+          GridPos gp_p;
+          gridpos_copy( gp_p, ppath.gp_p[np-1] );
           Vector itw_p(2);
           interpweights( itw_p, gp_p );
 
+          // determine scattered direction (=LOS dir) weights for this ppath
+          // point (apply in scat element loop) and adapt gridpos structure for
+          // 2pts-reduced za grid.
+          GridPos gp_za, gp_iza;
+          gridpos(gp_za, scat_za_grid, ppath.los(ip,0), 0.5);
+          gridpos_copy( gp_iza, gp_za );
+          gp_iza.idx = 0;
+          Vector itw_iza(2);
+          interpweights( itw_iza, gp_iza ); 
 
-
-          GridPos gp_za;
-          gridpos(gp_za, scat_za_grid,ppath.los(ip,0),0.5);
-          Tensor4 pndT4(ne,1,1,1);
-          pndT4(joker,0,0,0) = ppath_pnd(joker,ip);
-          Tensor5 pha_mat_spt(ne, Nza, Naa, stokes_dim, stokes_dim, 0.);
-          Tensor5 product_fields(2, ne, Nza, Naa, stokes_dim, 0.);
-          Matrix doit_i_field_p(Nza, stokes_dim, 0.);
+          Tensor4 pndT4(ne, 1, 1, 1);
+          pndT4(joker, 0, 0, 0) = ppath_pnd(joker,ip);
 
           for( Index f_index=0; f_index<f_grid.nelem(); f_index++ )
           {
-//            for( Index iza=0; iza<Nza; iza++ )
-//              for( Index s=0; s<stokes_dim; s++ )
-//                interp( m, itw_p, doit_i_field(f_index,joker,0,0,joker,0,s), gp_p, gp_za );
-//            iy(f,s) = m(0,0);
-//          }
-//      }
+            Matrix inc_field(Nza, stokes_dim, 0.);
+            Tensor3 scat_field(2, ne,stokes_dim, 0.);
 
-            product_fields = 0;
+            for( Index za_in=0; za_in<Nza; za_in++ )
+            {
+              for( Index i=0; i<stokes_dim; i++ )
+              {
+                inc_field(za_in, i) = 
+                  interp( itw_p, doit_i_field(f_index,joker,0,0,za_in,0,i), gp_p );
+              }
+            }
+
+            Tensor5 pha_mat_spt(ne, Nza, Naa, stokes_dim, stokes_dim, 0.);
+            Tensor5 product_fields(2, ne, Nza, Naa, stokes_dim, 0.);
             for( Index iza=0; iza<2; iza++ )
             {
               pha_mat_sptFromData(pha_mat_spt,
@@ -1336,43 +1343,45 @@ void iyHybrid(
                                   scat_za_grid, aa_grid, iza+gp_za.idx, 0,
                                   f_index, f_grid, ppath_t[ip],
                                   pndT4, 0, 0, 0, verbosity );
-              Index ise_flat=0;
-              for( Index iss=0; iss<scat_data.nelem(); iss++ )
+              for( Index ise_flat=0; ise_flat<ne; ise_flat++ )
               {
-                for( Index ise=0; ise<scat_data[iss].nelem(); ise++ )
+                for( Index za_in = 0; za_in < Nza; ++ za_in )
                 {
-                  for( Index za_in = 0; za_in < Nza; ++ za_in )
+                  for( Index aa_in = 0; aa_in < Naa; ++ aa_in )
                   {
-                    for( Index aa_in = 0; aa_in < Naa; ++ aa_in )
-                    {
-                      // Multiplication of phase matrix with incoming 
-                      // intensity field.
-                      for ( Index i = 0; i < stokes_dim; i++)
-                        for (Index j = 0; j< stokes_dim; j++)
-                        {
-                          product_fields(iza, ise_flat, za_in, aa_in, i) +=
-                            pha_mat_spt(ise_flat,za_in,aa_in,i,j) *
-                            doit_i_field_p(za_in, j);
-                        }
-                    }//end aa_in loop
-                  }//end za_in loop
-              //integration of the product of ifield_in and pha
-              //  over zenith angle and azimuth angle grid. It calls
-/*              for (Index i = 0; i < stokes_dim; i++)
+                    // Multiplication of phase matrix with incoming intensity
+                    // field.
+                    for ( Index i = 0; i < stokes_dim; i++)
+                      for (Index j = 0; j< stokes_dim; j++)
+                      {
+                        product_fields(iza, ise_flat, za_in, aa_in, i) +=
+                          pha_mat_spt(ise_flat, za_in, aa_in, i, j) *
+                          inc_field(za_in, j);
+                      }
+                  }//end aa_in loop
+                }//end za_in loop
+
+                for (Index i = 0; i < stokes_dim; i++)
                 {
-                  doit_scat_field( p_index, 0, 0, scat_za_index_local, 0, i)
-                    = AngIntegrate_trapezoid_opti
-                    (product_field(joker, joker, i),
-                     scat_za_grid,
-                     scat_aa_grid,
-                     grid_stepsize);
-                  
-                }//end i loop
-*/                  
-                  ise_flat++;
-                } // end ise
-              } // end iss
+                  // Integration of the phase matrix with inc field product
+                  // from above over zenith angle and azimuth angle grid.
+                  scat_field(iza,ise_flat,i) = AngIntegrate_trapezoid(
+                    product_fields(iza, ise_flat, joker, joker, i),
+                    scat_za_grid, aa_grid);
+                } //end i loop
+              } // end ise_flat
             } // end iza
+
+            for( Index ise_flat=0; ise_flat<ne; ise_flat++ )
+            {
+              for (Index i = 0; i < stokes_dim; i++)
+              {
+                // Interpolate scattered intensity to LOS direction
+                ppath_scat_source( f_index, i, ise_flat, ip ) =
+                  ppath_pnd(ise_flat,ip) *
+                  interp(itw_iza, scat_field(joker,ise_flat,i), gp_iza );
+              } //end i loop
+            } // end ise_flat
           } // end f_index
         } // end if ppath_pnd
       } // end ip
